--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@gratio/crypt",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A very simple package for encrypting communications between server and client.",
   "main": "index.js",
   "types": "types.d.ts",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
